Added conf. file for powersupplies, and the corresponding reader class to read that configuration.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,5 +70,8 @@ target_link_libraries(MainWrap HVWrapper -lncurses)
 add_executable(Read  test/Read.cpp)
 target_link_libraries(Read ${CAENHV_LIBRARIES})
 
+add_executable(PowerSupplyConfTester  test/PowerSupplyConfTester.cpp src/PowerSupplyConfReader.cpp)
+#target_link_libraries(Read ${CAENHV_LIBRARIES})
+
 #target_link_libraries(MainWrap ${CAEN_LIBRARIES})
 
